Refactor exploratory analysis of passenger survival predictions using ridge logistic regression

--- a/exploration/predict_survival_using_logistic_regression_with_sex_age_title/analysis.ipynb
+++ b/exploration/predict_survival_using_logistic_regression_with_sex_age_title/analysis.ipynb
@@ -64,7 +64,7 @@
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "#from titanic import data, models"
+    "from titanic import data, models"
    ]
   },
   {
@@ -197,14 +197,21 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "df = data.extract_title(df)\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = models.data_preparation(df, test_size=0.2, random_state=0)\n",
+    "models.run_majority_vote(X_train, X_test, y_train, y_test);\n",
+    "models.run_logistic_regression(X_train, X_test, y_train, y_test);"
+   ]
   }
  ]
 }
